force-app/main/default/objects/System_Template__c/System_Template__c.object-meta.xml
<CustomObject>
    <label>System Template</label>
    <nameField>
        <label>System Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>