force-app/main/default/objects/System_Template__c/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF Cycle</fullName>
            </value>
            <value>
                <fullName>FET Cycle</fullName>
            </value>
            <value>
                <fullName>VOT Cycle</fullName>
            </value>
            <value>
                <fullName>OI Cycle</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Cycle</fullName>
            </value>
            <value>
                <fullName>IUI Cycle</fullName>
            </value>
            <value>
                <fullName>Fresh Egg Donor Cycle</fullName>
            </value>
            <value>
                <fullName>TARFO Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>