force-app/main/default/objects/System_Template__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>System Templates</relationshipLabel>
    <relationshipName>System_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>