force-app/main/default/objects/System_Template__c/fields/Task_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Type__c</fullName>
    <label>Task Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Cycle Creation</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>