force-app/main/default/objects/System_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>