force-app/main/default/objects/System_Template__c/fields/Triggering_Event__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Event__c</fullName>
    <label>Triggering Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biopsy</fullName>
            </value>
            <value>
                <fullName>Change Over</fullName>
            </value>
            <value>
                <fullName>Day 1</fullName>
            </value>
            <value>
                <fullName>Day 3 Assessment</fullName>
            </value>
            <value>
                <fullName>Day 5 Assessment</fullName>
            </value>
            <value>
                <fullName>Day 6 Assessment</fullName>
            </value>
            <value>
                <fullName>Denuding/CockTriming</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Transfer Event</fullName>
            </value>
            <value>
                <fullName>Donate Eggs Cycle Event</fullName>
            </value>
            <value>
                <fullName>Egg Thaw Event</fullName>
            </value>
            <value>
                <fullName>Egg Vitrification Event</fullName>
            </value>
            <value>
                <fullName>Embryo Thawing</fullName>
            </value>
            <value>
                <fullName>Embryo Transfer</fullName>
            </value>
            <value>
                <fullName>Embryo Vitrification (Freezing)</fullName>
            </value>
            <value>
                <fullName>Failed Fert - Sperm Quality Check</fullName>
            </value>
            <value>
                <fullName>Fertilisation Check</fullName>
            </value>
            <value>
                <fullName>Insemination</fullName>
            </value>
            <value>
                <fullName>IUI</fullName>
            </value>
            <value>
                <fullName>Laser Assisted Hatching</fullName>
            </value>
            <value>
                <fullName>Nurse Medication Check</fullName>
            </value>
            <value>
                <fullName>OPU</fullName>
            </value>
            <value>
                <fullName>OPU Preparation Event</fullName>
            </value>
            <value>
                <fullName>Ovulation Event</fullName>
            </value>
            <value>
                <fullName>Post Thaw Day 5 Assessment</fullName>
            </value>
            <value>
                <fullName>Pre-Implantation Genetic Testing</fullName>
            </value>
            <value>
                <fullName>Pregnancy Scan Event</fullName>
            </value>
            <value>
                <fullName>Pregnancy Test</fullName>
            </value>
            <value>
                <fullName>Sperm Freeze</fullName>
            </value>
            <value>
                <fullName>Sperm Preparation</fullName>
            </value>
            <value>
                <fullName>Trigger Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>