force-app/main/default/objects/System_Template__c/recordTypes/Medication_Template.recordType-meta.xml
<RecordType>
    <fullName>Medication_Template</fullName>
    <active>true</active>
    <label>Medication Template</label>
</RecordType>