force-app/main/default/objects/System_Template__c/recordTypes/Pathology_Template.recordType-meta.xml
<RecordType>
    <fullName>Pathology_Template</fullName>
    <active>true</active>
    <label>Pathology Template</label>
</RecordType>