force-app/main/default/objects/System_Template__c/recordTypes/Task_Template.recordType-meta.xml
<RecordType>
    <fullName>Task_Template</fullName>
    <active>true</active>
    <label>Task Template</label>
</RecordType>