force-app/main/default/objects/System_Template__c/listViews/All_Event_Triggered_Templates.listView-meta.xml
<ListView>
    <fullName>All_Event_Triggered_Templates</fullName>
    <columns>NAME</columns>
    <columns>Cycle_Type__c</columns>
    <columns>Triggering_Event__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>System_Template__c.Event_Triggered_Template</value>
    </filters>
    <label>All Event Triggered Templates</label>
</ListView>