force-app/main/default/objects/System_Template__c/listViews/All_Protocols.listView-meta.xml
<ListView>
    <fullName>All_Protocols</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cycle_Type__c</field>
        <operation>equals</operation>
        <value>IVF Cycle</value>
    </filters>
    <label>All Medication Templates</label>
</ListView>