force-app/main/default/objects/System_Template__c/listViews/All_Task_Templates.listView-meta.xml
<ListView>
    <fullName>All_Task_Templates</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Task_Template_Type__c</columns>
    <columns>Template_Type__c</columns>
    <columns>Day_to_Run__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>System_Template__c.Task_Template</value>
    </filters>
    <label>All Task Templates</label>
</ListView>