force-app/main/default/objects/System_Template__c/listViews/allSelection_System_Template.listView-meta.xml
<ListView>
    <fullName>allSelection_System_Template</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>